# wingpanel-indicator-sugarmate

./: README.md  meson.build
src/: Indicator.vala
